@@ -5,7 +5,7 @@
 //   Jb Evain (jbevain@gmail.com)
 //
 // Generated by /CodeGen/cecil-gen.rb do not edit
-// Fri Apr 21 16:46:45 CEST 2006
+// Wed Jul 19 21:15:22 GMT+1:00 2006
 //
 // (C) 2005 Jb Evain
 //
@@ -146,7 +146,7 @@ namespace Mono.Cecil {
 			return null;
 		}
 
-		public MethodDefinition GetConstructor (bool isStatic, ITypeReference [] parameters)
+		public MethodDefinition GetConstructor (bool isStatic, TypeReference [] parameters)
 		{
 			foreach (MethodDefinition ctor in this)
 				if (ctor.IsStatic == isStatic && ctor.Parameters.Count == parameters.Length)
@@ -154,6 +154,19 @@ namespace Mono.Cecil {
 						if (ctor.Parameters [i].ParameterType.FullName == parameters [i].FullName)
 							return ctor;
 
+			return null;
+		}
+
+		public MethodDefinition GetConstructor (bool isStatic, ParameterDefinitionCollection parameters)
+		{
+			foreach (MethodDefinition ctor in this)
+				if (ctor.IsStatic == isStatic && ctor.Parameters.Count == parameters.Count) {
+					if (parameters.Count == 0)
+						return ctor;
+					for (int i = 0; i < parameters.Count; i++)
+						if (ctor.Parameters [i].ParameterType.FullName == parameters [i].ParameterType.FullName)
+							return ctor;
+				}
 			return null;
 		}
 
