@@ -5,7 +5,7 @@
 //   Jb Evain (jbevain@gmail.com)
 //
 // Generated by /CodeGen/cecil-gen.rb do not edit
-// Wed Apr 19 19:59:38 CEST 2006
+// Wed Jul 19 21:18:13 GMT+1:00 2006
 //
 // (C) 2005 Jb Evain
 //
@@ -69,6 +69,7 @@ namespace Mono.Cecil {
 		void RemoveAt (int index);
 
 		MethodDefinition GetConstructor (bool isStatic, Type [] parameters);
-		MethodDefinition GetConstructor (bool isStatic, ITypeReference [] parameters);
+		MethodDefinition GetConstructor (bool isStatic, TypeReference [] parameters);
+		MethodDefinition GetConstructor (bool isStatic, ParameterDefinitionCollection parameters);
 	}
 }
