@@ -5,7 +5,7 @@
 //   Jb Evain (jbevain@gmail.com)
 //
 // Generated by /CodeGen/cecil-gen.rb do not edit
-// Wed Apr 19 19:59:38 CEST 2006
+// Wed Jul 19 21:18:13 GMT+1:00 2006
 //
 // (C) 2005 Jb Evain
 //
@@ -70,7 +70,7 @@ namespace Mono.Cecil {
 
 		MethodDefinition [] GetMethod (string name);
 		MethodDefinition GetMethod (string name, Type [] parameters);
-		MethodDefinition GetMethod (string name, ITypeReference [] parameters);
+		MethodDefinition GetMethod (string name, TypeReference [] parameters);
 		MethodDefinition GetMethod (string name, ParameterDefinitionCollection parameters);
 	}
 }
