@@ -5,7 +5,7 @@
 //   Jb Evain (jbevain@gmail.com)
 //
 // Generated by /CodeGen/cecil-gen.rb do not edit
-// Fri Apr 21 16:46:45 CEST 2006
+// Wed Jul 19 21:15:22 GMT+1:00 2006
 //
 // (C) 2005 Jb Evain
 //
@@ -154,7 +154,7 @@ namespace Mono.Cecil {
 			return null;
 		}
 
-		public MethodDefinition GetMethod (string name, ITypeReference [] parameters)
+		public MethodDefinition GetMethod (string name, TypeReference [] parameters)
 		{
 			foreach (MethodDefinition meth in this)
 				if (meth.Name == name && meth.Parameters.Count == parameters.Length) {
@@ -175,7 +175,7 @@ namespace Mono.Cecil {
 						return meth;
 					for (int i = 0; i < parameters.Count; i++)
 						if (meth.Parameters [i].ParameterType.FullName == parameters [i].ParameterType.FullName)
-							return meth;	
+							return meth;
 				}
 			return null;
 		}
